@@ -1,10 +1,12 @@
 AV2 Changelog :: version a3.1
 
 + Added allowAirBubbleElytra option to stats.yml; default false
++ Added infiniteInCreative option to chi.yml; whether chi is infinite in creative mode
 
 * By default, mining takes only 4 instead of 8 chi
 * Commands no longer case-sensitive (capital/lowercase doesn't matter)
 * Don't have to look directly at water to make water arc
+* Infinite chi while in creative mode
 
 > Fix elytra flight allowing infinite height
 > Fix problem with radial menu in 3rd person
